--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,12 @@
     <version>3.2.1</version>
     <scope>test</scope>
 </dependency>
+<dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-test</artifactId>
+    <version>3.2.1</version>
+    <scope>test</scope>
+</dependency>
 </dependencies>
   <build>
     <finalName>01-mavenapp</finalName>
